--- a/day16/index.html
+++ b/day16/index.html
@@ -69,7 +69,10 @@
 
                     </ul><!--gnb pc 끝-->
                     <!--모바일 햄버거메뉴-->
-                    <div class="mobile-gnb-box mobile"></div>
+                    <div class="mobile-gnb-box mobile">
+                        <!--햄버거 메뉴 아이콘-->
+                        <i class="fa fa-bar"></i>
+                    </div>
 
 
 
@@ -351,7 +354,7 @@
 
             <!--fnb-->
             <div class="fnb flex flex-center align-items-center">
-                <ul class="flex flex-between">
+                <ul class="flex flex-center flex-wrap">
                     <li><a href="#">회사소개</a></li>
                     <li><a href="#">개인정보취급방침</a></li>
                     <li><a href="#">이용약관</a></li>
